Update website content

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a
                           system, without detailed knowledge of its internal structure?</i></b></li>
                   </ul>
-                  Systems theory and machine learning provide principled concepts to address these questions, and I use
-                  these ideas throughout my research.
+                  Systems theory and machine learning provide principled concepts to address these questions. Please see the following
+                  research statement.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
@@ -120,9 +120,12 @@
                     This idea is related to the small-gain theorem and time-scale separation in systems theory, which I have applied to robust distributed optimization
                     of complex networks. The result is surprsing: the achievement of the objective can be guaranteed for rather general 
                     classes of uncertain systems subject to disturbances, as long as appropriate modules are weakly coupled. Of course,
-                    the "weak coupling" condition is non-trivial, and right language should be used to described it.
+                    the "weak coupling" condition is non-trivial, and right language should be used to described it. Please see robust distributed optimization in <a
+                                                        href="https://tl3049.github.io/research.html"
+                                                        target="_blank"
+                                                        style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
-                  <p> This is also a potential
+                  <p> This is a potential
                     direction for future research in large language models (LLMs). As the training samples of LLMs are to be run out, how to continue
                     to improve the performance of LLMs will be a challenging problem. To achieve this goal, self-learning can be
                     a promising approach, but how to design the self-learning module and how to ensure the improvement of the overall performance
