Update website content

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                           system, without detailed knowledge of its internal structure?</i></b></li>
                   </ul>
                   Systems theory and machine learning provide principled concepts to address these questions. Please see the following
-                  research statement.
+                  research statement if you are interested on my solutions.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
