Update website content

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a
                           system, without detailed knowledge of its internal structure?</i></b></li>
                   </ul>
-                  Systems theory and machine learning provide principled concepts to address these questions. Please see the following
-                  research statement if you are interested on my solutions.
+                  Systems theory and machine learning provide principled concepts to address these questions. If you are interested, Please see the following
+                  <strong>Research Statement</strong>.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
