--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a
                           system, without detailed knowledge of its internal structure?</i></b></li>
                   </ul>
-                  Systems theory and machine learning provide principled concepts to address these questions. If you are interested, Please see the following
+                  Systems theory and machine learning provide principled concepts to address these questions. If you are
+                  interested, Please see the following
                   <strong>Research Statement</strong>.
                   </p>
                   <p style="text-align:center">
@@ -103,34 +104,46 @@
                   <h2>Research Statement</h2>
                   <p>
                     My research focuses on distributed optimization and reinforcement learning for multi-agent systems
-                    with applications to transportation and robotics. Throughout my research, all of the effective approaches are
+                    with applications to transportation and robotics. Throughout my research, all of the effective
+                    approaches are
                     particular solutions to the above two questions.
                   </p>
                   <p>
-                    The first question is related to nearly every engineering subject,  because
-                    we often break a complex system into smaller subsystems, each of which achieves a specific goal. This is the case, e.g.,
-                    to develop a web application, the front end handles user interactions and the back end manages data storage. 
-                    In distributed optimization, an optimizer reduces the overall loss and an aggregator ensures consensus among agents. 
-                    In reinforcement learning, an actor learns to improve the policy and a critic evaluates the policy. All of these
-                    topics are related to the first question. 
+                    The first question is relevant to a wide range of engineering disciplines,
+                    since we often break a complex system into smaller subsystems,
+                    each with a specific goal. For example, when developing a web application,
+                    the front end handles user interactions, while the back end manages data storage.
+                    In distributed optimization, the optimizer reduces the overall loss, while the aggregator
+                    ensures consensus among agents. In reinforcement learning, the actor
+                    improves the policy, and the critic evaluates it.
+                    All of these cases relate to the first question.
                   </p>
                   <p>
                     Under which conditions, can this structure ensure the achievement of the overall goal?
-                    Generally speaking, the two modules should be weakly coupled, i.e., the failure of one module does not significantly affect the other module.
-                    This idea is related to the small-gain theorem and time-scale separation in systems theory, which I have applied to robust distributed optimization
-                    of complex networks. The result is surprsing: the achievement of the objective can be guaranteed for rather general 
-                    classes of uncertain systems subject to disturbances, as long as appropriate modules are weakly coupled. Of course,
-                    the "weak coupling" condition is non-trivial, and right language should be used to described it. Please see robust distributed optimization in <a
-                                                        href="https://tl3049.github.io/research.html"
-                                                        target="_blank"
-                                                        style="color:inherit; text-decoration:underline;">Research</a> for details.
+                    Generally speaking, the two modules should be weakly coupled, i.e., the failure of one module does
+                    not significantly affect the other module.
+                    This idea is related to the small-gain theorem and time-scale separation in systems theory, which I
+                    have applied to robust distributed optimization
+                    of complex networks. The result is surprsing: the achievement of the objective can be guaranteed for
+                    rather general
+                    classes of uncertain systems subject to disturbances, as long as appropriate modules are weakly
+                    coupled. Of course,
+                    the "weak coupling" condition is non-trivial, and right language should be used to described it.
+                    Please see <strong>Robust Distributed Optimization</strong> in <a
+                      href="https://tl3049.github.io/research.html" target="_blank"
+                      style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
                   <p> This is a potential
-                    direction for future research in large language models (LLMs). As the training samples of LLMs are to be run out, how to continue
-                    to improve the performance of LLMs will be a challenging problem. To achieve this goal, self-learning can be
-                    a promising approach, but how to design the self-learning module and how to ensure the improvement of the overall performance
-                    are still open questions. The docompostion and weak-coupling ideas may provide some insights to this problem: RLHF is a typical example where
-                    the reward model and the policy model are weakly coupled, and the overall performance can be improved by smartly updating the two models.</p>
+                    direction for future research in large language models (LLMs). As the training samples of LLMs are
+                    to be run out, how to continue
+                    to improve the performance of LLMs will be a challenging problem. To achieve this goal,
+                    self-learning can be
+                    a promising approach, but how to design the self-learning module and how to ensure the improvement
+                    of the overall performance
+                    are still open questions. The docompostion and weak-coupling ideas may provide some insights to this
+                    problem: RLHF is a typical example where
+                    the reward model and the policy model are weakly coupled, and the overall performance can be
+                    improved by smartly updating the two models.</p>
               </tr>
             </tbody>
           </table>
