--- a/index.html
+++ b/index.html
@@ -119,19 +119,20 @@
                     All of these cases relate to the first question.
                   </p>
                   <p>
-                   Under what conditions can this structure ensure the overall goal?
-                   In general, the two modules should be <strong>weakly coupled</strong>, i.e., the failure of 
-                   one module does not significantly affect the other. 
-                   This idea relates to the <a
-                      href="https://en.wikipedia.org/wiki/Small-gain_theorem" target="_blank"
+                    Under what conditions can this structure ensure the overall goal?
+                    In general, the two modules should be <strong>weakly coupled</strong>, i.e., the failure of
+                    one module does not significantly affect the other.
+                    This idea relates to the <a href="https://en.wikipedia.org/wiki/Small-gain_theorem" target="_blank"
                       style="color:inherit; text-decoration:underline;">small-gain theorem</a>
-                     and <a
-                      href="https://epubs.siam.org/doi/book/10.1137/1.9781611971118" target="_blank"
-                      style="color:inherit; text-decoration:underline;">time-scale separation</a>  in systems theory, which I have applied to robust 
-                      distributed optimization of complex networks. 
-                      The result is surprising: the objective can be guaranteed for rather general classes of uncertain nonlinear systems
-                       subject to disturbances, provided that appropriate modules are weakly coupled. 
-                       Of course, the “weak coupling” condition is non-trivial, and right language should be used to describe it.
+                    and <a href="https://epubs.siam.org/doi/book/10.1137/1.9781611971118" target="_blank"
+                      style="color:inherit; text-decoration:underline;">time-scale separation</a> in systems theory,
+                    which I have applied to robust
+                    distributed optimization of complex networks.
+                    The result is surprising: the objective can be guaranteed for rather general classes of uncertain
+                    nonlinear systems
+                    subject to disturbances, provided that appropriate modules are weakly coupled.
+                    Of course, the “weak coupling” condition is non-trivial, and right language should be used to
+                    describe it.
                     Please see <strong>Robust Distributed Optimization</strong> in <a
                       href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">Research</a> for details.
