Update website content

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                     The first question is relevant to a wide range of engineering disciplines,
                     since we often break a complex system into smaller subsystems,
                     each with a specific goal. For example, when developing a web application,
-                    the front end handles user interactions, while the back end manages data storage.
-                    In distributed optimization, the optimizer reduces the overall loss, while the aggregator
+                    the front end handles user interactions and the back end manages data storage.
+                    In distributed optimization, the optimizer reduces the overall loss and the aggregator
                     ensures consensus among agents. In reinforcement learning, the actor
-                    improves the policy, and the critic evaluates it.
+                    improves the policy and the critic evaluates it.
                     All of these cases relate to the first question.
                   </p>
                   <p>
