Update website content

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     the front end handles user interactions and the back end manages data storage.
                     In distributed optimization, the optimizer reduces the overall loss and the aggregator
                     ensures consensus among agents. In reinforcement learning, the actor
-                    improves the policy and the critic evaluates it.
+                    improves the policy and the critic evaluates the policy.
                     All of these cases relate to the first question.
                   </p>
                   <p>
