Update website content

--- a/research.html
+++ b/research.html
@@ -128,7 +128,7 @@
                                             <td style="width:50%; vertical-align:middle;">
                                                 <p>
                                                     Urban traffic signals are often fixed or heuristically actuated, and
-                                                    they struggle to handle uncertain, time-varying
+                                                    they struggle to handle uncertain and time-varying
                                                     demand. I use a <strong>data-driven</strong> approach that learns
                                                     traffic dynamics from
                                                     sensor data and optimizes signal timings in real time via various
