Update website content

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     Under what conditions can this structure ensure the overall goal?
                     In general, the two modules should be <strong>weakly coupled</strong>, i.e., the failure of
                     one module does not significantly affect the other.
-                    This idea relates to the <a href="https://en.wikipedia.org/wiki/Small-gain_theorem" target="_blank"
+                    This idea relates to the <a href="https://link.springer.com/article/10.1007/BF01211469" target="_blank"
                       style="color:inherit; text-decoration:underline;">small-gain theorem</a>
                     and <a href="https://epubs.siam.org/doi/book/10.1137/1.9781611971118" target="_blank"
                       style="color:inherit; text-decoration:underline;">time-scale separation</a> in systems theory,
