Update website content

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     The result is surprising: the objective can be guaranteed for rather general classes of uncertain
                     nonlinear systems
                     subject to disturbances, provided that appropriate modules are weakly coupled.
-                    Of course, the “weak coupling” condition is non-trivial, and right language should be used to
+                    Of course, the weakly coupling condition is non-trivial, and right language should be used to
                     describe it.
                     Please see <strong>Robust Distributed Optimization</strong> in <a
                       href="https://tl3049.github.io/research.html" target="_blank"
