Update website content

--- a/index.html
+++ b/index.html
@@ -137,17 +137,14 @@
                       href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
-                  <p> This is a potential
-                    direction for future research in large language models (LLMs). As the training samples of LLMs are
-                    to be run out, how to continue
-                    to improve the performance of LLMs will be a challenging problem. To achieve this goal,
-                    self-learning can be
-                    a promising approach, but how to design the self-learning module and how to ensure the improvement
-                    of the overall performance
-                    are still open questions. The docompostion and weak-coupling ideas may provide some insights to this
-                    problem: RLHF is a typical example where
-                    the reward model and the policy model are weakly coupled, and the overall performance can be
-                    improved by smartly updating the two models.</p>
+                  <p> This is a potential direction for future research in large language models (LLMs). 
+                    As the available training data for LLMs is being exhausted, 
+                    how to continue improving performance will be a challenging problem. 
+                    To this end, self-learning is a promising approach; however, 
+                    how to design the self-learning module and ensure improvement of the overall performance 
+                    remain open questions. The decomposition and weakly coupling ideas may offer insight: 
+                    RLHF is a typical example in which the reward model and the policy model are weakly coupled, 
+                    and the overall performance can be improved by carefully updating the two models.</p>
               </tr>
             </tbody>
           </table>
