Update website content

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                       href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
-                  <p> This is a potential direction for future research in large language models (LLMs). 
+                  <p> This is a potential direction for future research in <strong>large language models </strong> (LLMs). 
                     As the available training data for LLMs is being exhausted, 
                     how to continue improving performance will be a challenging problem. 
-                    To this end, self-learning is a promising approach; however, 
+                    To this end, <strong> self-learning </strong> is a promising approach; however, 
                     how to design the self-learning module and ensure improvement of the overall performance 
                     remain open questions. The decomposition and weakly coupling ideas may offer insight: 
-                    RLHF is a typical example in which the reward model and the policy model are weakly coupled, 
+                    <em>RLHF</em>  is a typical example in which the reward model and the policy model are weakly coupled, 
                     and the overall performance can be improved by carefully updating the two models.</p>
               </tr>
             </tbody>
