--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                       href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
-                  <p> This is a potential direction for future research in <strong>large language models </strong> (LLMs). 
+                  <p> This is a potential direction for future research in <em>large language models </em> (LLMs). 
                     As the available training data for LLMs is being exhausted, 
                     how to continue improving performance will be a challenging problem. 
-                    To this end, <strong> self-learning </strong> is a promising approach; however, 
+                    To this end, <em> self-learning </em> is a promising approach; however, 
                     how to design the self-learning module and ensure improvement of the overall performance 
                     remain open questions. The decomposition and weakly coupling ideas may offer insight: 
                     <em>RLHF</em>  is a typical example in which the reward model and the policy model are weakly coupled, 
