Update website content

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   </p>
                   <p> This is a potential direction for future research in <em>large language models </em> (LLMs). 
                     As the available training data for LLMs is being exhausted, 
-                    how to continue improving performance will be a challenging problem. 
+                    how to continue improving the performance will be a challenging problem. 
                     To this end, <em> self-learning </em> is a promising approach; however, 
                     how to design the self-learning module and ensure improvement of the overall performance 
                     remain open questions. The decomposition and weakly coupling ideas may offer insight: 
