Update website content

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     how to continue improving the performance will be a challenging problem. 
                     To this end, <em> self-learning </em> is a promising approach; however, 
                     how to design the self-learning module and ensure improvement of the overall performance 
-                    remain open questions. The decomposition and weakly coupling ideas may offer insight: 
+                    remains an open question. The decomposition and weakly coupling ideas may offer insight: 
                     <em>RLHF</em>  is a typical example in which the reward model and the policy model are weakly coupled, 
                     and the overall performance can be improved by carefully updating the two models.</p>
               </tr>
