--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                     To this end, <em> self-learning </em> is a promising approach; however, 
                     how to design the self-learning module and ensure improvement of the overall performance 
                     remains an open question. The decomposition and weakly coupling ideas may offer insight: 
-                    <em>RLHF</em>  is a typical example in which the reward model and the policy model are weakly coupled, 
+                    <a
+                      href="https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback" target="_blank"
+                      style="color:inherit; text-decoration:underline;">RLHF</a>  is a typical example in which the reward model and the policy model are weakly coupled, 
                     and the overall performance can be improved by carefully updating the two models.</p>
               </tr>
             </tbody>
