Update website content

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                       href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
-                  <p> This is a potential direction for future research in <em>large language models </em> (LLMs). 
+                  <p> This is a potential research direction in <em>large language models </em> (LLMs). 
                     As the available training data for LLMs is being exhausted, 
                     how to continue improving the performance will be a challenging problem. 
                     To this end, <em> self-learning </em> is a promising approach; however, 
@@ -145,7 +145,8 @@
                     remains an open question. The decomposition and weakly coupling ideas may offer insight: 
                     <a
                       href="https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback" target="_blank"
-                      style="color:inherit; text-decoration:underline;">RLHF</a>  is a typical example in which the reward model and the policy model are weakly coupled, 
+                      style="color:inherit; text-decoration:underline;">RLHF</a>  is an example in which the reward model
+                    and the policy model are weakly coupled, 
                     and the overall performance can be improved by carefully updating the two models.</p>
               </tr>
             </tbody>
