Update website content

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                       href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">Research</a> for details.
                   </p>
-                  <p> This is a potential research direction in <em>large language models </em> (LLMs). 
+                  <p> This is a potential research direction for <em>large language models </em> (LLMs). 
                     As the available training data for LLMs is being exhausted, 
                     how to continue improving the performance will be a challenging problem. 
                     To this end, <em> self-learning </em> is a promising approach; however, 
