Update website content

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     how to continue improving the performance will be a challenging problem. 
                     To this end, <em> self-learning </em> is a promising approach; however, 
                     how to design the self-learning module and ensure improvement of the overall performance 
-                    remains an open question. The decomposition and weakly coupling ideas may offer insight: 
+                    remains an open question. The decomposition and weak coupling ideas may offer insight: 
                     <a
                       href="https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback" target="_blank"
                       style="color:inherit; text-decoration:underline;">RLHF</a>  is an example in which the reward model
