Update website content

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                       The second question comes from the last paragraph of the <a
                       href="https://ieeexplore.ieee.org/abstract/document/1098316" target="_blank"
                       style="color:inherit; text-decoration:underline;">seminal paper</a>
-                      on the systems theory. It is related to the first question as shown above, so to avoid redundacny,
+                      on systems theory. It is related to the first question as shown above, so to avoid redundacny,
                       I want to show its connection with machine learning. 
                     </p>
                   
