Update website content

--- a/index.html
+++ b/index.html
@@ -153,8 +153,15 @@
                       The second question comes from the last paragraph of the <a
                       href="https://ieeexplore.ieee.org/abstract/document/1098316" target="_blank"
                       style="color:inherit; text-decoration:underline;">seminal paper</a>
-                      on systems theory. It is related to the first question as shown above, so to avoid redundacny,
-                      I want to show its connection with machine learning. 
+                      on systems theory. It is related to the first question but its importance allows it to be a 
+                      separate topic. In fact, this question is about how to achieve a desired performance of a black box. 
+                      In practice, the model of a physical plant, e.g., a vehicle, is decided by physical or eletrical laws.  
+                      As the integration of the physical components becomes complex, it is generally impossible to obtain a precise model
+                      to describe the behavior of the plant. In most of the cases, the plants are black blox and 
+                      engineers use input-output data to estimate the model and design controllers such that the plant can run as expected.
+                      
+
+
                     </p>
                   
               </tr>
