Update website content

--- a/index.html
+++ b/index.html
@@ -56,16 +56,22 @@
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p class="name" style="text-align: center;">
-                    Tong Liu
+                    Hello, I am Tong Liu!
                   </p>
                   <p>I'm a PhD candidate in the Department of <a
                       href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical
                       and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by
-                    Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on
-                    distributed optimization, reinforcement learning, systems theory, transportation, and robotics.
+                    Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>.
+                  </p>
+                  <p>
+                    I have a broad research interests in reinforcement learning, distributed optimization,
+                    systems and control theory,
+                    and their applications to traffic networks, autonomous vehicles, robotics, and large language
+                    models.
+                    Please click <a href="https://eclipse.dev/sumo/" target="_blank"
+                      style="color:inherit; text-decoration:underline;">here</a> to find more about my research.
                   </p>
 
-                  </p>
                   <p style="text-align:center">
                     <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=LTH_3NgAAAAJ&hl=en">Google Scholar</a>
