Update website content

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     systems and control theory,
                     and their applications to traffic networks, autonomous vehicles, robotics, and large language
                     models.
-                    Please click <a href="https://eclipse.dev/sumo/" target="_blank"
+                    Please click <a href="https://tl3049.github.io/research.html" target="_blank"
                       style="color:inherit; text-decoration:underline;">here</a> to find more about my research.
                   </p>
 
