Update website content

--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
                     I have a broad research interests in reinforcement learning, distributed optimization,
                     systems and control theory,
                     and their applications to traffic networks, autonomous vehicles, robotics, and large language
-                    models.
-                  </p>
-                  <p>
-                    Please click <a href="https://tl3049.github.io/research.html" target="_blank" style="color:inherit; text-decoration:underline;">here</a> to learn more about my research, 
+                    models.   Please click <a href="https://tl3049.github.io/research.html" target="_blank" style="color:inherit; text-decoration:underline;">here</a> to learn more about my research, 
                     and click <a href="https://tl3049.github.io/cv.html" target="_blank" style="color:inherit; text-decoration:underline;">here</a> to view my CV.
                   </p>
+
                   <p style="text-align:center">
                     <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=LTH_3NgAAAAJ&hl=en">Google Scholar</a>
