--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:37%;max-width:37%">
-                  <a href="images/capbala.webp"><img
+                  <a href="images/TL.png"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo"
                       src="images/capbala.webp" class="hoverZoomLink"></a>
                 </td>
