Update website content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr style="padding:0px">
-                <td style="padding:2.5%;width:75%;vertical-align:middle">
+                <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p class="name" style="text-align: center;">
                     Hello, I am Tong Liu!
                   </p>
@@ -67,8 +67,10 @@
                     I have a broad research interests in reinforcement learning, distributed optimization,
                     systems and control theory,
                     and their applications to traffic networks, autonomous vehicles, robotics, and large language
-                    models.   Please click <a href="https://tl3049.github.io/research.html" target="_blank" style="color:inherit; text-decoration:underline;">here</a> to learn more about my research, 
-                    and click <a href="https://tl3049.github.io/cv.html" target="_blank" style="color:inherit; text-decoration:underline;">here</a> to view my CV.
+                    models. Please click <a href="https://tl3049.github.io/research.html" target="_blank"
+                      style="color:inherit; text-decoration:underline;">here</a> to learn more about my research,
+                    and click <a href="https://tl3049.github.io/cv.html" target="_blank"
+                      style="color:inherit; text-decoration:underline;">here</a> to view my CV.
                   </p>
 
                   <p style="text-align:center">
@@ -79,14 +81,16 @@
                     <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
                   </p>
                 </td>
-                <td style="padding:2.5%;width:25%;max-width:37%">
+                <!-- <td style="padding:2.5%;width:25%;max-width:37%">
                   <a href="images/TL.png"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo"
                       src="images/TL.png" class="hoverZoomLink"></a>
+                </td> -->
+                <td style="padding:2.5%;width:37%;max-width:37%">
+                  <a href="images/TL.png"><img
+                      style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
+                      src="images/TL.png" class="hoverZoomLink"></a>
                 </td>
-                <!-- <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
-              </td> -->
               </tr>
             </tbody>
           </table>
