--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo"
                       src="images/TL.png" class="hoverZoomLink"></a>
                 </td> -->
-                <td style="padding:2.5%;width:37%;max-width:37%">
+                <!-- <td style="padding:2.5%;width:37%;max-width:37%">
                   <a href="images/TL.png"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
                       src="images/TL.png" class="hoverZoomLink"></a>
-                </td>
+                </td> -->
               </tr>
             </tbody>
           </table>
