--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                   </p>
                   <p>I'm a PhD candidate in the Department of <a
                       href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical
-                      and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by
-                    Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>.
+                      and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, working in the 
+                      <a href="https://eeweb.engineering.nyu.edu/~canlab/index.html"> Control and Network Lab </a> 
+                      under the supervision of Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>.
                   </p>
                   <p>
                     I have a broad research interests in reinforcement learning, distributed optimization,
