Update website content

--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
                     I have a broad research interests in reinforcement learning, distributed optimization,
                     systems and control theory,
                     and their applications to traffic networks, autonomous vehicles, robotics, and large language
-                    models. Please click <a href="https://tl3049.github.io/research.html" target="_blank"
-                      style="color:inherit; text-decoration:underline;">here</a> to learn more about my research,
-                    and click <a href="https://tl3049.github.io/cv.html" target="_blank"
-                      style="color:inherit; text-decoration:underline;">here</a> to view my CV.
+                    models. Please click <a href="https://tl3049.github.io/research.html">here</a> to learn more about my research,
+                    and click <a href="https://tl3049.github.io/cv.html">here</a> to view my CV.
                   </p>
 
                   <p style="text-align:center">
