Update website content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                       under the supervision of Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>.
                   </p>
                   <p>
-                    I have a broad research interests in reinforcement learning, distributed optimization,
+                    I have a broad research interest in reinforcement learning, distributed optimization,
                     systems and control theory,
                     and their applications to traffic networks, autonomous vehicles, robotics, and large language
                     models. Please click <a href="https://tl3049.github.io/research.html">here</a> to learn more about my research,
