Update website content

--- a/research.html
+++ b/research.html
@@ -250,12 +250,12 @@
                                             <!-- Left: Figure -->
                                             <td style="width:50%;padding-right:20px;vertical-align:top;">
                                                 <figure style="margin:0;">
-                                                    <img src="images/opt.jpg"
-                                                        alt="Optimal speed profiles under speed limit"
+                                                    <img src="images/optn.jpg"
+                                                        alt="Optimal speed curve under speed limit"
                                                         style="width:100%;border-radius:10px;">
                                                     <figcaption
                                                         style="text-align:center;font-style:italic;margin-top:5px;">
-                                                        Optimal speed profiles under speed limit.
+                                                        Optimal speed curve under speed limit.
                                                     </figcaption>
                                                 </figure>
                                             </td>
