Update website content

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                     <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
                   </p>
                 </td>
-                <!-- <td style="padding:2.5%;width:25%;max-width:37%">
-                  <a href="images/TL.png"><img
+                <td style="padding:2.5%;width:37%;max-width:37%">
+                  <a href="images/TL.jpg"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo"
-                      src="images/TL.png" class="hoverZoomLink"></a>
-                </td> -->
+                      src="images/TL.jpg" class="hoverZoomLink"></a>
+                </td>
                 <!-- <td style="padding:2.5%;width:37%;max-width:37%">
                   <a href="images/TL.png"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
