--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                       src="images/TL.jpg" class="hoverZoomLink"></a>
                 </td> -->
                 <td style="padding:2.5%;width:37%;max-width:37%">
-                  <a href="images/TL.png"><img
+                  <a href="images/TL.jpg"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
-                      src="images/TL.png" class="hoverZoomLink"></a>
+                      src="images/TL.jpg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
