Update website content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GW2RGZT1Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GW2RGZT1Z');
+  </script>
+
 </head>
 
 
@@ -60,15 +70,18 @@
                   </p>
                   <p>I'm a PhD candidate in the Department of <a
                       href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical
-                      and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, working in the 
-                      <a href="https://eeweb.engineering.nyu.edu/~canlab/index.html"> Control and Network Lab </a> 
-                      under the supervision of Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>.
+                      and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, working in
+                    the
+                    <a href="https://eeweb.engineering.nyu.edu/~canlab/index.html"> Control and Network Lab </a>
+                    under the supervision of Prof. <a
+                      href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>.
                   </p>
                   <p>
                     I have broad research interests in reinforcement learning, distributed optimization,
                     systems and control theory,
                     and their applications to traffic networks, autonomous vehicles, robotics, and large language
-                    models. Please click <a href="https://tl3049.github.io/research.html">here</a> to learn more about my research
+                    models. Please click <a href="https://tl3049.github.io/research.html">here</a> to learn more about
+                    my research
                     and click <a href="https://tl3049.github.io/cv.html">here</a> to view my CV.
                   </p>
 
@@ -81,9 +94,8 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:29%;max-width:37%">
-                  <a href="images/TL.jpg"><img
-                      style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo"
-                      src="images/TL.jpg" class="hoverZoomLink"></a>
+                  <a href="images/TL.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;"
+                      alt="profile photo" src="images/TL.jpg" class="hoverZoomLink"></a>
                 </td>
                 <!-- <td style="padding:2.5%;width:37%;max-width:37%">
                   <a href="images/TL.jpg"><img
